# imo-vmdb

./: .dockerignore  .gitignore  .readthedocs.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker.yml  pypi.yml  tests.yml
docs/: Makefile  about.rst  api.rst  cli.rst  conf.py  csv.rst  db.rst  fields.rst  import.rst  index.rst  install.rst  normalizing.rst  openapi.yaml  rest_api.rst  setup.rst  webui.rst
imo_vmdb/: __init__.py  __main__.py
imo_vmdb/command/: __init__.py  export.py
imo_vmdb/csv_import/: __init__.py  magnitudes.py  radiant.py  rate.py  session.py  shower.py
imo_vmdb/model/: sky.py
imo_vmdb/normalizer/: __init__.py  magnitude.py  rate.py
imo_vmdb/webui/: __init__.py  api.py  routes.py  server.py
imo_vmdb/webui/templates/: index.html
resources/: config.json  mysql.json  pgsql.json  sqlite.json
src/vmdb/: __init__.py  utils.py
src/vmdb/command/: cleanup.py  generate_solarlongs.py  import_magnitudes.py  import_radiants.py  import_rates.py  import_sessions.py  import_showers.py  normalize.py
src/vmdb/model/: __init__.py  location.py  radiant.py  shower.py  solarlong.py
src/vmdb/normalizer/: __init__.py  db.py  magnitude.py  rate.py  session.py
tests/: conftest.py  test_api.py  test_core.py  test_routes.py
tests/fixtures/: magnitudes.csv  rates.csv  sessions.csv
vmdb/: __init__.py
vmdb/command/: cleanup.py  import_csv.py  initdb.py  normalize.py
vmdb/csv_import/: magnitudes.py  radiant.py  rate.py  session.py  shower.py
vmdb/model/: radiant.py  shower.py
vmdb/normalizer/: __init__.py  magnitude.py  rate.py  session.py
vmdb2sql/: __init__.py  __main__.py  db.py
vmdb2sql/command/: __init__.py  cleanup.py  generate_solarlongs.py  import_csv.py  import_magnitudes.py  import_radiants.py  import_rates.py  import_sessions.py  import_showers.py  initdb.py  normalize.py
vmdb2sql/csv_import/: __init__.py  magnitudes.py  radiant.py  rate.py  session.py  shower.py
vmdb2sql/model/: radiant.py  shower.py  solarlong.py
vmdb2sql/normalizer/: __init__.py  magnitude.py  rate.py  session.py
