[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "imo-vmdb"
version = "1.5.1"
authors = [ "Janko Richter <janko@richtej.de>" ]
description = "Imports VMDB CSV files from IMO into a SQL database."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jankorichter/imo-vmdb"
repository = "https://github.com/jankorichter/imo-vmdb"
documentation = "https://imo-vmdb.readthedocs.io/en/latest/"
keywords = [
    "IMO",
    "VMDB",
    "SQL",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
astropy = ">=6.0"
flask = "^3.0"
psycopg2 = { version = "^2.9", optional = true }
pymysql = { version = "^1.0", optional = true }
Sphinx = { version = "^8.0", optional = true }
sphinx-rtd-theme = { version = "^3.0", optional = true }

[tool.poetry.extras]
mysql = ["pymysql"]
pgsql = ["psycopg2"]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.poetry.scripts]
imo-vmdb-webui = "imo_vmdb.webui.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jankorichter/imo-vmdb/issues"
