[metadata]
name = imo-vmdb2sql
version = 1.0.0
author = Janko Richter
author_email = janko@richtej.de
description = Imports VMDB CSV files from IMO into a SQL database.
keywords=IMO, VMDB, SQL
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/jankorichter/imo-vmdb2sql/issues
    Source = https://github.com/jankorichter/imo-vmdb2sql/

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    astropy
    csv
    datetime
    getopt
    importlib
    json
    logging
    math
    numpy
    re
    warnings

[options.package_data]
vmdb2sql = data/*.csv
